[package]
name = "KifQuery"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8"               # 文字コード自動判別＋変換用
mysql = "24"                      # MySQL接続用
chrono = "0.4"                    # 日時型
regex = "1"                       # KIFパース用

dotenvy = "0.15"
once_cell = "1.19"
lazy_static = "1.4"

axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
